--- a/browsertest/browsertest.min.html
+++ b/browsertest/browsertest.min.html
@@ -16,7 +16,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.min.js"></script>
 <script src="./setup.js"></script>
 <script src="./browsertest.min.js"></script>
-<script src="./runTests.js"></script>
+<script src="./run_tests.js"></script>
 
 </body>
 </html>
