--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-Open the console to get started with `lisk-js`.
+Open the console to get started with Lisk Elements`.
 <div id="output"></div>
 
-<script src="dist-browser/lisk-js.min.js"></script>
+<script src="dist-browser/lisk-elements.min.js"></script>
 
 </body>
 </html>
